syntax = "proto3";
package kratos.api;

option go_package = "user/internal/conf;conf";

import "google/protobuf/duration.proto";

message Bootstrap {
  Server server = 1;
  Data data = 2;
}

message Server {
  message HTTP {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  message GRPC {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  HTTP http = 1;
  GRPC grpc = 2;
}

message Data {
  message Database {
    string driver = 1;
    string source = 2;
  }
  message MySQL {
    string source = 1;
    int32 max_open_conns = 2;
    int32 max_idle_conns = 3;
    google.protobuf.Duration max_life_time = 4;
  }
  message Redis {
    string network = 1;
    string addr = 2;
    string password = 3;
    int32 db = 4;
    google.protobuf.Duration dial_timeout = 5;
    google.protobuf.Duration read_timeout = 6;
    google.protobuf.Duration write_timeout = 7;
    int32 pool_size = 8;
    int32 min_idle_conns = 9;
    google.protobuf.Duration max_conn_age = 10;
  }
  message Mongo {
    string addr = 1;
    uint64 max_pool_size = 2;
    google.protobuf.Duration max_idle_time_ms = 3;
  }
  Database database = 1;
  MySQL mysql = 2;
  Redis redis = 3;
  Mongo mongo = 4;
}

// 注册中心
message Registry {
  message Consul {
    string address = 1;
    string scheme = 2;
  }
  Consul consul = 1;
}

// 修改配置proto后需要make config生成pb.go